--- a/styles/main.css
+++ b/styles/main.css
@@ -15,8 +15,10 @@
 
 :root {
   --primary-color: rgb(218, 8, 127);
+  --primary-color-light: rgba(255, 0, 144, 0.969);
   --secondary-color: rgb(255, 255, 255);
   --gray-color: rgb(197, 186, 186);
+  --gray-color-dark: rgb(136, 136, 136);
   --hover-color: rgb(72, 6, 109);
   --dongle: 'Dongle', sans-serif;
 }
