--- a/styles/main.css
+++ b/styles/main.css
@@ -20,6 +20,7 @@
   --secondary-color: rgb(255, 255, 255);
   --gray-color: rgb(197, 186, 186);
   --gray-color-dark: rgb(136, 136, 136);
+  --yellow-color: rgb(255, 255, 0);
   --hover-color: rgb(72, 6, 109);
   --dongle: 'Dongle', sans-serif;
 }
