--- a/styles/peliculas.css
+++ b/styles/peliculas.css
@@ -1,8 +1,32 @@
+/*pagina principal de peliculas*/
+.links-paginas li {
+  text-align: center;
+  line-height: 5;
+  list-style-position: inside;
+}
+
+.links-paginas li a {
+  background-color: rgb(228, 231, 40);
+  border-radius: 0.25rem;
+  font-weight: 800;
+  padding: 0.25rem 0.75rem;
+  text-decoration: none;
+  -webkit-border-radius: 0.25rem;
+  -moz-border-radius: 0.25rem;
+  -ms-border-radius: 0.25rem;
+  -o-border-radius: 0.25rem;
+}
+
+.links-paginas li a:hover {
+  background-color: rgb(0, 255, 255);
+}
 
 /* pagina peliculas populares*/
 /* pagina de top 3*/
+/*pagina de mas recaudacion*/
 .peliculas-populares,
-.top-3 {
+.top-3,
+.mas-recaudacion {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
@@ -12,21 +36,32 @@
 }
 
 .peliculas-populares p,
-.top-3 p {
+.top-3 p,
+.mas-recaudacion p {
   margin-bottom: 1.5rem;
 }
 
 .peliculas-populares h2,
 .top-3 h2,
-.peliculas-populares h3 {
+.mas-recaudacion h2,
+.peliculas-populares h3,
+.top-3 h3,
+.mas-recaudacion h3 {
   padding-bottom: 1rem;
 }
 
 .peliculas-populares li,
-.top-3 li {
+.top-3 li,
+.mas-recaudacion li {
   line-height: 1.6;
+  text-align: center;
+  list-style-position: inside;
 }
 
+.peliculas-populares li::marker {
+  font-weight: 800;
+}
+/* boton para volver */
 .volver {
   display: flex;
   flex-wrap: wrap;
@@ -37,10 +72,12 @@
   margin-top: 2rem;
 }
 
-.volver button {
-  padding: 0.10rem 0.25rem;
-}
-.volver a {
+.volver button a {
   text-decoration: none;
   font-weight: 800;
+  padding: 0.10rem 0.25rem;
+}
+
+.volver a:hover {
+  background-color: rgb(0, 255, 255);
 }
