--- a/styles/canciones.css
+++ b/styles/canciones.css
@@ -1,3 +1,87 @@
+.canciones {
+  display: grid;
+  grid-template-columns: 33% 33% 33%;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+  justify-items: center;
+  gap: 1rem;
+}
+
+@media screen and (max-width: 568px) {
+  .canciones {
+    grid-template-columns: 100%;
+  }
+}
+@media screen and (min-width: 569px) and (max-width: 768px) {
+  .canciones {
+    grid-template-columns: 50%;
+  }
+}
+
+.canciones a {
+  font-weight: 800;
+  text-decoration: none;
+}
+
+.canciones a:hover,
+.canciones h2:hover,
+.canciones p:hover {
+  background-color: rgb(255, 0, 234);
+}
+
+.canciones h2,
+.canciones p {
+  text-align: center;
+  background-color: rgb(0, 255, 255);
+}
+
+.canciones img {
+  border-radius: 1rem;
+  width: 100%;
+  -webkit-border-radius: 1rem;
+  -moz-border-radius: 1rem;
+  -ms-border-radius: 1rem;
+  -o-border-radius: 1rem;
+}
+
+/* para que en las letras de las canciones esten divididas por secciones*/
 .pb-2 {
   padding-bottom: 2rem;
+}
+
+/*Para los span de cada una de las canciones*/
+.stronger h2,
+.boa-sorte h2,
+.beautiful-day h2 {
+  margin: 2rem 0rem 1rem;
+}
+
+.stronger span,
+.boa-sorte span,
+.boa-sorte span {
+  background-color: rgb(255, 255, 0);
+  padding: 0.25rem 0.5rem;
+  margin: 0.75rem 0.25rem;
+}
+
+/*Boton volver*/
+.volver {
+  padding: 1ren;
+}
+
+.volver a {
+  background-color: rgb(255, 255, 0);
+  border-radius: 0.75;
+  -webkit-border-radius: 0.75;
+  -moz-border-radius: 0.75;
+  -ms-border-radius: 0.75;
+  -o-border-radius: 0.75;
+  font-weight: 800;
+  padding: 0.25rem 0.50rem;
+  text-decoration: none;
+}
+
+.volver a:hover {
+ background-color: rgb(0, 255, 255);
 }
