--- a/styles/articulo.css
+++ b/styles/articulo.css
@@ -1,16 +1,21 @@
-nav {
-  padding: 1rem 0rem;
+h1 {
+  font-size: 1.5rem;
 }
 
-nav ul {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  align-content: center;
-  justify-content: space-evenly;
-  align-items: center;
+/* para darle el color gris al texto*/
+.gray {
+  color: rgb(128, 128, 128);
+}
+/* Para personalizar el link */
+.light-blue {
+  text-decoration: none;
+  color: rgb(0, 208, 255);
 }
 
-nav li {
-  display: inline;
+p {
+  padding-bottom: 1.5rem;
+}
+
+.parrafo-distinto {
+  font-family: 'Courier New', Courier, monospace;
 }
