--- a/styles/main.css
+++ b/styles/main.css
@@ -129,3 +129,49 @@ footer img {
 .right {
   text-align: right;
 }
+
+/* para dar colores a las fruta en frutas.html*/
+
+.frutas {
+  padding: 1.5rem 2.5rem;
+}
+
+.manzana {
+  color: rgba(255, 0, 0, 0.872);
+}
+
+.banana {
+  color: rgba(255, 255, 0, 0.93);
+}
+
+.kiwi {
+  color: rgb(8, 150, 8);
+}
+
+.naranja {
+  color: rgb(255, 165, 0);
+}
+
+.frutilla {
+  color: rgb(255, 0, 93);
+}
+
+.uva {
+  color: rgb(144, 34, 144);
+}
+
+.pomelo {
+  color: rgba(255, 217, 0, 0.848);
+}
+
+.cereza {
+  color: rgba(134, 13, 57, 0.913);
+}
+
+.pera {
+color:rgb(124, 208, 124);
+}
+
+.maracuja {
+  color: rgba(255, 242, 0, 0.856);
+}
