--- a/styles/main.css
+++ b/styles/main.css
@@ -311,3 +311,122 @@ color:rgb(124, 208, 124);
 .c0 {
   color: #0909a8;
 }
+
+/* INDEX CLASE 3*/
+.header-clase3 {
+  flex-direction: column;
+}
+
+#clase3 p {
+  text-align: center;
+  font-weight: 800;
+  line-height: 2.8;
+}
+
+#clase3 p a {
+  background-color: #c3c3ea;
+  border-radius: 0.25em;
+  box-shadow: -4px 4px rgba(130, 123, 123, 0.505);
+  text-decoration: none;
+  padding: 0.25rem 0.50rem;
+  -webkit-border-radius: 0.25em;
+  -moz-border-radius: 0.25em;
+  -ms-border-radius: 0.25em;
+  -o-border-radius: 0.25em;
+}
+
+#clase3 p a:hover {
+  background-color: #eac3e4;
+}
+
+/** CLASE 3 BANDERAS ***/
+/* banderas*/
+#clase3-banderas h2 {
+  text-align: center;
+  padding: 1rem 0rem;
+} 
+
+.bandera {
+  height: 400px;
+}
+
+.bandera-argentina,
+.bandera-mexico,
+.bandera-francia,
+.bandera-alemania {
+  width: 300px;
+  height: 200px;
+  margin: 0 auto;
+}
+
+/* bandera Argentina*/
+.bandera-argentina .franja-celeste,
+.bandera-argentina .franja-blanca {
+  height: 100px;
+}
+
+.bandera-argentina .franja-celeste {
+  background-color: #74acdc ;
+}
+
+.bandera-argentina .franja-blanca {
+  background-color: #fff;
+}
+
+/* bandera Mexico */
+/*bancera francia*/
+.bandera-mexico .franja-verde,
+.bandera-mexico .franja-blanca,
+.bandera-mexico .franja-roja,
+.bandera-francia .franja-azul,
+.bandera-francia .franja-blanca,
+.bandera-francia .franja-roja {
+  height: 200px;
+  width: 90px;
+  display: inline-block;
+}
+
+/* bandera Mexico */
+.bandera-mexico .franja-verde {
+  background-color:  #046b44;
+}
+
+.bandera-mexico .franja-blanca {
+  background-color: #fff;
+}
+
+.bandera-mexico .franja-roja {
+  background-color: #cb1424 ;
+}
+
+/* bandera francia*/
+.bandera-francia .franja-azul {
+  background-color: #042494 ;
+}
+
+.bandera-francia .franja-blanca {
+  background-color: #f3f1f3 ;
+}
+
+.bandera-francia .franja-roja {
+  background-color:  #ec2b3b ;
+}
+
+/* bandera alamana*/
+.bandera-alemania .franja-negra,
+.bandera-alemania .franja-roja,
+.bandera-alemania .franja-amarilla {
+  height: 100px;
+}
+
+.bandera-alemania .franja-negra {
+  background-color:  #040404;
+}
+
+.bandera-alemania .franja-roja {
+  background-color: #dc0404 ;
+}
+
+.bandera-alemania .franja-amarilla {
+  background-color: #fccb04 ;
+}
