--- a/styles/main.css
+++ b/styles/main.css
@@ -503,3 +503,50 @@ footer img {
   width: 90%;
   background-color: #4caf50;
 }
+
+/* CLASE 3 - DONACION */
+#donacion {
+  background-color: #8F8CA7;
+}
+
+.donacion-card {
+  background-color: #eae3fb;
+  border-radius: 0.50rem;
+  height: 70vh;
+  width: 60vw;
+  margin: auto;
+  -webkit-border-radius: 0.50rem;
+  -moz-border-radius: 0.50rem;
+  -ms-border-radius: 0.50rem;
+  -o-border-radius: 0.50rem;
+}
+
+.donacion-texto p,
+.donacion-importe,
+.donacion-continue {
+  padding: 1rem 2rem;
+  text-align: center;
+}
+
+.btn-importe {
+  border-width: 2px;
+  border-color: #8F8CA7;
+  border-radius: 0.50rem;
+  margin: 0.10rem;
+  padding: 0.50rem 0.50rem;
+  -webkit-border-radius: 0.50rem;
+  -moz-border-radius: 0.50rem;
+  -ms-border-radius: 0.50rem;
+  -o-border-radius: 0.50rem;
+}
+
+.btn-importe:hover {
+  background-color:  #7464f3 ;
+}
+
+.btn-continue {
+  background-color: #7464f3;
+  border-width: 0px;
+  width: 90%;
+  padding: 0.25rem 0rem;
+}
