--- a/styles/main.css
+++ b/styles/main.css
@@ -504,6 +504,76 @@ footer img {
   background-color: #4caf50;
 }
 
+/* CLASE 3 - HABILIDADES*/
+.habilidades {
+  background: rgb(7,200,209);
+  background: linear-gradient(90deg, rgba(7,200,209,1) 0%, rgba(68,212,216,1) 100%);
+}
+
+.habilidades-card {
+  background-color: #fff;
+  height: 70vh;
+  width: 80vw;
+  margin: auto;
+  border-radius: 14px;
+  -webkit-border-radius: 14px;
+  -moz-border-radius: 14px;
+  -ms-border-radius: 14px;
+  -o-border-radius: 14px;
+}
+
+.habilidades-card h3 {
+  font-size: 0.80rem;
+}
+
+.row1 {
+  display: flex;
+  flex-wrap: wrap;
+  align-content: center;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.row1 h2 {
+  padding: 0.75rem;
+}
+
+.row2,
+.row3,
+.row4 {
+  width: 238px;
+  margin: 0px 0px 6px 12px;
+  border: 1px solid #707070;
+  padding: 0.25rem;
+} 
+
+.row2 {
+  border-left: 2px solid #ff00fb;
+}
+
+.row3 {
+  border-left: 2px solid #5d00ff;
+}
+
+.row4 {
+  border-left: 2px solid #ff9d00;
+}
+
+@media screen and (min-width: 768px) {
+  .row2,
+  .row3,
+  .row4 {
+    width: 580px;
+    margin: 0px 0px 12px 18px;
+
+  } 
+
+  .habilidades-card h3 {
+    font-size: 1.25rem;
+  }
+}
+
+
 /* CLASE 3 - DONACION */
 #donacion {
   background-color: #8F8CA7;
