--- a/styles/main.css
+++ b/styles/main.css
@@ -620,3 +620,52 @@ footer img {
   width: 90%;
   padding: 0.25rem 0rem;
 }
+
+/* CLASE 3 - TAREAS*/
+.tareas {
+  background-color:  #047cc4 ;
+}
+
+.tareas h2 {
+  color: #fff;
+  padding-bottom: 2rem;
+}
+
+.tareas .card {
+  background-color: #e0e0e1;
+  border-radius: 7px;
+  width: 60%;
+  -webkit-border-radius: 7px;
+  -moz-border-radius: 7px;
+  -ms-border-radius: 7px;
+  -o-border-radius: 7px;
+}
+
+@media all and (max-width: 768px) {
+  .tareas .card {
+    width: 80%;
+  }
+}
+.tareas h3 {
+  color: #515151; 
+  padding: 1rem;
+}
+
+.tareas .texto {
+  background-color: #fff;
+  border-radius: 5px;
+  color: #515151;
+  font-weight: 600;
+  margin: 0.50rem;
+  padding: 0.25rem;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+}
+
+.tareas .texto-bloqueado {
+  color: #727070;
+  font-weight: 400;
+  margin: 0.50rem;
+}
