--- a/styles/main.css
+++ b/styles/main.css
@@ -724,4 +724,79 @@ footer img {
   color: #727070;
   font-weight: 400;
   margin: 0.50rem;
+  padding-bottom: 1rem;
+}
+
+/* CLASE 3 - PROTECCION DE CUENTA */
+.proteccion-cuenta {
+  background-color: #ADB0BD;
+}
+
+.proteccion-cuenta .card {
+  background-color: #fff;
+  border-radius: 14px;
+  width: 500px;
+  height: 600px;
+  margin: 100px auto;
+  -webkit-border-radius: 14px;
+  -moz-border-radius: 14px;
+  -ms-border-radius: 14px;
+  -o-border-radius: 14px;
+  padding: 1rem;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+}
+
+.row-2,
+.row-3 {
+  padding: 1rem 0rem;
+}
+
+.row-4 {
+  padding: 1.5rem 3rem;
+  text-align: center;
+}
+
+.row-5 {
+  background-color: #bdc0ce;
+  border-radius: 7px;
+  padding: 1.25rem 2.5rem;
+  -webkit-border-radius: 7px;
+  -moz-border-radius: 7px;
+  -ms-border-radius: 7px;
+  -o-border-radius: 7px;
+  margin-bottom: 2rem;
+}
+
+.row-5-1,
+.row-5-2 {
+  height: 45px;
+}
+
+.row-5-3 {
+  margin-bottom: 2rem;
+}
+
+.row-5-3 button {
+  padding: 0.25rem 1.75rem;
+  border-radius: 18px;
+  -webkit-border-radius: 18px;
+  -moz-border-radius: 18px;
+  -ms-border-radius: 18px;
+  -o-border-radius: 18px;
+}
+
+.row6-confirm {
+  background-color: #2A4064;
+  color: #fff;
+  border-radius: 14px;
+  -webkit-border-radius: 14px;
+  -moz-border-radius: 14px;
+  -ms-border-radius: 14px;
+  -o-border-radius: 14px;
 }
